# posteriors

./: .gitignore  .pre-commit-config.yaml  404.html  CITATION.cff  README.md  bayesllama3.py  clinic-oos.py  final_hidden_state.py  index.html  main.py  mini_transformer.py  mkdocs.yml  objects.inv  oos_texts.pkl  pyproject.toml  setup.py  sghmc.py  train.py
.github/workflows/: publish_docs.yaml  publish_pypi.yaml  tests.yaml
api/: index.html
api/optim/: index.html
api/torchopt/: index.html
api/tree_utils/: index.html
api/types/: index.html
contributing/: index.html
data/: clinic-oos.py  final_hidden_state.py  oos_oos_intents.pkl  oos_oos_texts.pkl  oos_test_intents.pkl  oos_test_texts.pkl  oos_train_intents.pkl  oos_train_texts.pkl
docs/: contributing.md  getting_started.md  gotchas.md  index.md  log_posteriors.md
examples/: README.md  continual_regression.ipynb  double_well.py  ekf_premier_league.py  fine_tune_lm.py  lightning_autoencoder.py  load_sghmc.py  lora_transformer.py  pyro_pima_indians_sghmc.ipynb  pyro_pima_indians_vi.ipynb  run_sghmc.py
experiments/: base.py  eval_lora_transformer.py  laplace-visuals.py  laplace_plots.py  load_sghmc.py  lora_for_laplace.py  lora_for_map.py  main.py  run_accumulated_lora.py  run_laplace_lora.py  run_sequential_lora.py  single_laplace_lora.py  vis.ipynb
getting_started/: index.html
gotchas/: index.html
log_posteriors/: index.html
posteriors/: __init__.py  optim.py  torchopt.py  tree_utils.py  types.py  utils.py
search/: search_index.json
sghmc/: dataloader.py  model.py  utils.py
stylesheets/: extra.css
tests/: scenarios.py  test_laplace.py  test_optim.py  test_torchopt.py  test_tree_utils.py  test_types.py  test_utils.py  test_vi.py  utils.py
tutorials/: index.html
uqlib/: __init__.py  laplace_diag.py  optim.py  torchopt.py  types.py  utils.py
(+297 files in other folders)
